# periquito-app

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: hooks.rs  mod.rs  settings.rs
src-tauri/src/models/: app_settings.rs  hook_event.rs  mod.rs  parrot_level.rs  periquito_state.rs  session_data.rs
src-tauri/src/platform/: window.rs
src-tauri/src/services/: distractor_engine.rs  emotion_analyzer.rs  emotion_state.rs  focus_detector.rs  history_stats.rs  hook_installer.rs  idle_detector.rs  level_manager.rs  mod.rs  session_store.rs  socket_server.rs  sound_service.rs  spaced_repetition.rs  state_machine.rs
src/components/: ChatTip.tsx  GrassIsland.tsx  NotchLayout.tsx  QuizView.tsx  SessionSprite.tsx  SettingsView.tsx  SpriteSheet.tsx  StatsView.tsx
src/lib/: ipc.ts  sprite-physics.ts  tip-parser.ts
src/styles/: globals.css
