[package]
name = "periquito"
version = "1.0.0"
description = "Language Learning Tamagotchi for Claude Code"
authors = ["Iverson Dantas"]
edition = "2021"

[lib]
name = "periquito_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
rand = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
